feat: integrate Aviationstack real-time flight tracking API

--- a/index.html
+++ b/index.html
@@ -157,12 +157,40 @@
         <span>航班與票務資訊</span>
       </div>
       <div class="flight-details">
-        <div class="flight-route"><strong>去程 (8/1)</strong>：TPE 18:10 ➔ HKG ➔ FRA ➔ KEF 12:55(+1)</div>
-        <div class="flight-route"><strong>回程 (8/15)</strong>：KEF 14:20 ➔ FRA ➔ HKG ➔ TPE 19:25(+1)</div>
-        <div class="flight-note">✈️ 中華航空：02-412-9000 (代號 DQREFR)</div>
-        <div class="flight-note">✈️ 漢莎航空：02-2868-2313 (代號 DBSFXD)</div>
-        <div class="flight-note text-red">⚠️ 注意：法蘭克福與香港轉機時間緊湊，請儘快移動</div>
-        <div class="flight-note">🧳 行李：1件免費託運｜🛂 簽證：免簽 (>6個月效期)</div>
+        <div class="flight-item">
+          <span class="fi-airline">CI923</span>
+          <span class="fi-route">TPE 18:10 ➔ HKG 20:05</span>
+          <span class="fi-status st-sched" id="f-CI923">📍 載入中</span>
+        </div>
+        <div class="flight-item">
+          <span class="fi-airline">LH797</span>
+          <span class="fi-route">HKG 23:25 ➔ FRA 06:55</span>
+          <span class="fi-status st-sched" id="f-LH797">📍 載入中</span>
+        </div>
+        <div class="flight-item">
+          <span class="fi-airline">LH844</span>
+          <span class="fi-route">FRA 11:10 ➔ KEF 12:55</span>
+          <span class="fi-status st-sched" id="f-LH844">📍 載入中</span>
+        </div>
+        <div class="flight-item mt-2">
+          <span class="fi-airline">LH845</span>
+          <span class="fi-route">KEF 14:20 ➔ FRA 19:50</span>
+          <span class="fi-status st-sched" id="f-LH845">📍 載入中</span>
+        </div>
+        <div class="flight-item">
+          <span class="fi-airline">LH796</span>
+          <span class="fi-route">FRA 21:40 ➔ HKG 15:45</span>
+          <span class="fi-status st-sched" id="f-LH796">📍 載入中</span>
+        </div>
+        <div class="flight-item">
+          <span class="fi-airline">CI916</span>
+          <span class="fi-route">HKG 17:30 ➔ TPE 19:25</span>
+          <span class="fi-status st-sched" id="f-CI916">📍 載入中</span>
+        </div>
+
+        <div class="flight-note mt-2">☎️ 華航 02-412-9000 (DQREFR)｜漢莎 02-2868-2313 (DBSFXD)</div>
+        <div class="flight-note text-red">⚠️ 注意：法蘭克福與香港轉機緊湊，請儘快移動</div>
+        <div class="flight-note">🧳 托運行李：1件｜🛂 冰島簽證：免簽</div>
       </div>
     </div>
 
