feat: Add terminal, gate, and baggage carousel info to flight cards

--- a/index.html
+++ b/index.html
@@ -158,34 +158,52 @@
       </div>
       <div class="flight-details">
         <div class="flight-item">
-          <span class="fi-airline">CI923</span>
-          <span class="fi-route">TPE 18:10 ➔ HKG 20:05</span>
-          <span class="fi-status st-sched" id="f-CI923">📍 載入中</span>
+          <div class="fi-main">
+            <span class="fi-airline">CI923</span>
+            <span class="fi-route">TPE 18:10 ➔ HKG 20:05</span>
+            <span class="fi-status st-sched" id="f-CI923">📍 載入中</span>
+          </div>
+          <div class="fi-extra" id="f-CI923-ex"></div>
         </div>
         <div class="flight-item">
-          <span class="fi-airline">LH797</span>
-          <span class="fi-route">HKG 23:25 ➔ FRA 06:55</span>
-          <span class="fi-status st-sched" id="f-LH797">📍 載入中</span>
+          <div class="fi-main">
+            <span class="fi-airline">LH797</span>
+            <span class="fi-route">HKG 23:25 ➔ FRA 06:55</span>
+            <span class="fi-status st-sched" id="f-LH797">📍 載入中</span>
+          </div>
+          <div class="fi-extra" id="f-LH797-ex"></div>
         </div>
         <div class="flight-item">
-          <span class="fi-airline">LH844</span>
-          <span class="fi-route">FRA 11:10 ➔ KEF 12:55</span>
-          <span class="fi-status st-sched" id="f-LH844">📍 載入中</span>
+          <div class="fi-main">
+            <span class="fi-airline">LH844</span>
+            <span class="fi-route">FRA 11:10 ➔ KEF 12:55</span>
+            <span class="fi-status st-sched" id="f-LH844">📍 載入中</span>
+          </div>
+          <div class="fi-extra" id="f-LH844-ex"></div>
         </div>
         <div class="flight-item mt-2">
-          <span class="fi-airline">LH845</span>
-          <span class="fi-route">KEF 14:20 ➔ FRA 19:50</span>
-          <span class="fi-status st-sched" id="f-LH845">📍 載入中</span>
+          <div class="fi-main">
+            <span class="fi-airline">LH845</span>
+            <span class="fi-route">KEF 14:20 ➔ FRA 19:50</span>
+            <span class="fi-status st-sched" id="f-LH845">📍 載入中</span>
+          </div>
+          <div class="fi-extra" id="f-LH845-ex"></div>
         </div>
         <div class="flight-item">
-          <span class="fi-airline">LH796</span>
-          <span class="fi-route">FRA 21:40 ➔ HKG 15:45</span>
-          <span class="fi-status st-sched" id="f-LH796">📍 載入中</span>
+          <div class="fi-main">
+            <span class="fi-airline">LH796</span>
+            <span class="fi-route">FRA 21:40 ➔ HKG 15:45</span>
+            <span class="fi-status st-sched" id="f-LH796">📍 載入中</span>
+          </div>
+          <div class="fi-extra" id="f-LH796-ex"></div>
         </div>
         <div class="flight-item">
-          <span class="fi-airline">CI916</span>
-          <span class="fi-route">HKG 17:30 ➔ TPE 19:25</span>
-          <span class="fi-status st-sched" id="f-CI916">📍 載入中</span>
+          <div class="fi-main">
+            <span class="fi-airline">CI916</span>
+            <span class="fi-route">HKG 17:30 ➔ TPE 19:25</span>
+            <span class="fi-status st-sched" id="f-CI916">📍 載入中</span>
+          </div>
+          <div class="fi-extra" id="f-CI916-ex"></div>
         </div>
 
         <div class="flight-note mt-2">☎️ 華航 02-412-9000 (DQREFR)｜漢莎 02-2868-2313 (DBSFXD)</div>
